# Auto-Vk-Toolkit

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CmakePresets.json  LICENSE  LICENSE.md  README.md  clion_format_style.xml  compile_commands.json
.github/workflows/: cross-platform-check.yml
assets/: sponza_and_terrain.fscene  sponza_duo.fscene  sponza_with_plants_and_terrain.fscene
auto_vk_toolkit/: FRAMEWORK_ROOT.md
auto_vk_toolkit/include/: JetBrainsMono-Regular.hpp  animation.hpp  auto_vk_toolkit.hpp  bezier_curve.hpp  camera.hpp  catmull_rom_spline.hpp  command_buffer_convenience_functions.hpp  composition.hpp  composition_interface.hpp  concurrent_frames_count_changed_event.hpp  configure_and_compose.hpp  context_generic_glfw.hpp  context_generic_glfw_types.hpp  context_state.hpp  context_vulkan.hpp  conversion_utils.hpp  cp_interpolation.hpp  cubic_uniform_b_spline.hpp  cursor.hpp  destroying_events.hpp  event.hpp  event_data.hpp  files_changed_event.hpp  fixed_update_timer.hpp  format_for.hpp  image_data.hpp  imgui_manager.hpp  imgui_utils.h  input_buffer.hpp  invokee.hpp  key_code.hpp  key_state.hpp  lightsource.hpp  lightsource_gpu_data.hpp  log.hpp  material.hpp  material_config.hpp  material_gpu_data.hpp  material_gpu_data_ext.hpp  material_image_helpers.hpp  (+24 more)
auto_vk_toolkit/src/: JetBrainsMono-Regular.cpp  animation.cpp  bezier_curve.cpp  camera.cpp  catmull_rom_spline.cpp  composition.cpp  image_data.cpp  (+26 more)
cmake/: assimp.cmake  avk.cmake  glfw.cmake  imgui.cmake  simplefilewatcher.cmake  stb.cmake
docs/: ImGui.md  cmake.md  dynamic_rendering.md  meshlets.md  serializer.md  updater.md
examples/: EXAMPLES_README.md
examples/compute_image_processing/: CMakeLists.txt  compute_image_processing.md
examples/compute_image_processing/source/: compute_image_processing.cpp
examples/dynamic_rendering/: CMakeLists.txt  dynamic_rendering.md
examples/dynamic_rendering/shaders/: screen_space_tri.vert
examples/dynamic_rendering/source/: dynamic_rendering.cpp
examples/framebuffer/: CMakeLists.txt  framebuffer.md
examples/framebuffer/source/: framebuffer.cpp
examples/hello_world/: CMakeLists.txt
examples/hello_world/shaders/: a_triangle.vert
examples/hello_world/source/: hello_world.cpp
examples/model_loader/: CMakeLists.txt  model_loader.md
examples/model_loader/shaders/: diffuse_illum_fixed_lightsource.frag  diffuse_shading_fixed_lightsource.frag  passthrough.vert  transform_and_pass_pos_nrm_uv.vert
examples/model_loader/source/: camera_path.hpp  model_loader.cpp  ui_helper.hpp
examples/multi_invokee_rendering/: CMakeLists.txt  multi_invokee_rendering.md
examples/multi_invokee_rendering/shaders/: a_triangle.vert
examples/multi_invokee_rendering/source/: multi_invokee_rendering.cpp
examples/multiple_queues/: CMakeLists.txt  multiple_queues.md
examples/multiple_queues/source/: multiple_queues.cpp
examples/orca_loader/: CMakeLists.txt  orca_loader.md
examples/orca_loader/shaders/: diffuse_shading_fixed_lightsource.frag  transform_and_pass_pos_nrm_uv.vert
examples/orca_loader/source/: imfilebrowser.h  orca_loader.cpp
examples/particles/: CMakeLists.txt  hello_world.md
examples/particles/shaders/: particle.vert  particles.comp
examples/particles/source/: hello_world.cpp  particles.cpp
examples/present_from_compute/: CMakeLists.txt  present_from_compute.md
examples/present_from_compute/shaders/: blur.comp  passthrough.vert
examples/present_from_compute/source/: present_from_compute.cpp
examples/ray_query_in_ray_tracing_shaders/: CMakeLists.txt  ray_tracing_triangle_meshes.md
examples/ray_query_in_ray_tracing_shaders/shaders/: closest_hit_shader.rchit  ray_gen_shader.rgen
examples/ray_query_in_ray_tracing_shaders/source/: ray_query_in_ray_tracing_shaders.cpp  triangle_mesh_geometry_manager.hpp
examples/ray_tracing_custom_intersection/: CMakeLists.txt
examples/ray_tracing_custom_intersection/shaders/: rt_09_secondary.rmiss  rt_aabb.rchit  rt_aabb.rgen  rt_aabb.rint  rt_aabb_secondary.rchit
examples/ray_tracing_custom_intersection/source/: ray_tracing_custom_intersection.cpp
examples/ray_tracing_with_shadows_and_ao/: CMakeLists.txt  ray_tracing_with_shadows_and_ao.md
examples/ray_tracing_with_shadows_and_ao/shaders/: ao_closest_hit_shader.rchit  first_hit_closest_hit_shader.rchit  first_hit_miss_shader.rmiss  shadow_ao_miss_shader.rmiss  shadow_closest_hit_shader.rchit
examples/ray_tracing_with_shadows_and_ao/source/: ray_tracing_with_shadows_and_ao.cpp  triangle_mesh_geometry_manager.hpp
examples/skinned_meshlets/: CMakeLists.txt  skinned_meshlets.md
examples/skinned_meshlets/shaders/: cpu_gpu_shared_config.h  diffuse_shading_fixed_lightsource.frag  glsl_helpers.glsl  meshlet.mesh  meshlet.nv.mesh  meshlet.nv.task  meshlet.task
examples/skinned_meshlets/source/: skinned_meshlets.cpp
examples/static_meshlets/: CMakeLists.txt  static_meshlets.md
examples/static_meshlets/shaders/: cpu_gpu_shared_config.h  diffuse_shading_fixed_lightsource.frag  glsl_helpers.glsl  meshlet.mesh  meshlet.nv.mesh  meshlet.nv.task  meshlet.task  transform_and_pass_pos_nrm_uv.vert
examples/static_meshlets/source/: static_meshlets.cpp  ui_helper.hpp
examples/texture_cubemap/: CMakeLists.txt  texture_cubemap.md
examples/texture_cubemap/shaders/: reflect.frag  reflect.vert  skybox.frag  skybox.vert
examples/texture_cubemap/source/: texture_cubemap.cpp
examples/vertex_buffers/: CMakeLists.txt
examples/vertex_buffers/source/: vertex_buffers.cpp
examples/vertex_skinning/: CMakeLists.txt
examples/vertex_skinning/shaders/: diffuse_shading_fixed_lightsource.frag  dual_quaternion.glsl  quaternion.glsl  skinning.frag  skinning.vert
examples/vertex_skinning/source/: animated_model.cpp  animated_model.hpp  cor.cpp  cor.hpp  dual_quaternion.cpp  dual_quaternion.hpp  quaternion.cpp  quaternion.hpp  vertex_skinning.cpp
framework/: FRAMEWORK_ROOT.md
visual_studio/: .gitignore  README.md  auto_vk_toolkit.sln  cg_base.sln  exekutor.sln  gears-vk.sln
(+445 files in other folders)
